sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * FFI-safe Color representation.
 */
typedef struct FfiColor {
    /**
     * Red component (0.0 - 1.0).
     */
    float r;
    /**
     * Green component (0.0 - 1.0).
     */
    float g;
    /**
     * Blue component (0.0 - 1.0).
     */
    float b;
    /**
     * Alpha component (0.0 - 1.0).
     */
    float a;
} FfiColor;
/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * Creates a new sprite with the specified source rectangle (builder pattern).
 */
struct FfiSprite goud_sprite_with_source_rect(struct FfiSprite sprite, float x, float y, float width, float height);
/**
 * Sets the horizontal flip flag.
 */
void goud_sprite_set_flip_x(struct FfiSprite *sprite, bool flip);
/**
 * Gets the horizontal flip flag.
 */
bool goud_sprite_get_flip_x(const struct FfiSprite *sprite);
/**
 * Sets the vertical flip flag.
 */
void goud_sprite_set_flip_y(struct FfiSprite *sprite, bool flip);
/**
 * Gets the vertical flip flag.
 */
bool goud_sprite_get_flip_y(const struct FfiSprite *sprite);
/**
 * Sets both flip flags at once.
 */
void goud_sprite_set_flip(struct FfiSprite *sprite, bool flip_x, bool flip_y);
/**
 * Creates a new sprite with the specified horizontal flip (builder pattern).
 */
struct FfiSprite goud_sprite_with_flip_x(struct FfiSprite sprite, bool flip);
/**
 * Creates a new sprite with the specified vertical flip (builder pattern).
 */
struct FfiSprite goud_sprite_with_flip_y(struct FfiSprite sprite, bool flip);
/**
 * Creates a new sprite with both flip flags set (builder pattern).
 */
struct FfiSprite goud_sprite_with_flip(struct FfiSprite sprite, bool flip_x, bool flip_y);
/**
 * Returns true if the sprite is flipped on either axis.
 */
bool goud_sprite_is_flipped(const struct FfiSprite *sprite);
/**
 * Sets the anchor point with individual coordinates.
 */
void goud_sprite_set_anchor(struct FfiSprite *sprite, float x, float y);
/**
 * Gets the anchor point of the sprite.
 */
struct FfiVec2 goud_sprite_get_anchor(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with the specified anchor (builder pattern).
 */
struct FfiSprite goud_sprite_with_anchor(struct FfiSprite sprite, float x, float y);
/**
 * Sets a custom size for the sprite.
 */
void goud_sprite_set_custom_size(struct FfiSprite *sprite, float width, float height);
/**
 * Removes the custom size, using texture dimensions.
 */
void goud_sprite_clear_custom_size(struct FfiSprite *sprite);
/**
 * Gets the custom size of the sprite.
 */
bool goud_sprite_get_custom_size(const struct FfiSprite *sprite, struct FfiVec2 *out_size);
/**
 * Returns whether the sprite has a custom size set.
 */
bool goud_sprite_has_custom_size(const struct FfiSprite *sprite);
/**
 * Creates a new sprite with the specified custom size (builder pattern).
 */
struct FfiSprite goud_sprite_with_custom_size(struct FfiSprite sprite, float width, float height);
/**
 * Sets the texture handle for the sprite.
 */
void goud_sprite_set_texture(struct FfiSprite *sprite, uint64_t handle);
/**
 * Gets the texture handle of the sprite.
 */
uint64_t goud_sprite_get_texture(const struct FfiSprite *sprite);
/**
 * Gets the effective size of the sprite.
 */
struct FfiVec2 goud_sprite_size_or_rect(const struct FfiSprite *sprite);
/**
 * Returns the white color constant.
 */
struct FfiColor goud_color_white(void);