sdks/csharp/NativeMethods.g.cs


        /// <summary>
        ///  Creates a new sprite with the specified source rectangle (builder pattern).
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: The sprite to copy
        ///  - `x`: X position of the source rectangle
        ///  - `y`: Y position of the source rectangle
        ///  - `width`: Width of the source rectangle
        ///  - `height`: Height of the source rectangle
        ///
        ///  # Returns
        ///
        ///  A new FfiSprite with the source rectangle set.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_with_source_rect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_with_source_rect(FfiSprite sprite, float x, float y, float width, float height);

        /// <summary>
        ///  Sets the horizontal flip flag.
        ///
        ///  When true, the sprite is mirrored along the Y-axis.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `flip`: Whether to flip horizontally
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_flip_x", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_flip_x(FfiSprite* sprite, [MarshalAs(UnmanagedType.U1)] bool flip);

        /// <summary>
        ///  Gets the horizontal flip flag.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_get_flip_x", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_get_flip_x(FfiSprite* sprite);

        /// <summary>
        ///  Sets the vertical flip flag.
        ///
        ///  When true, the sprite is mirrored along the X-axis.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `flip`: Whether to flip vertically
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_flip_y", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_flip_y(FfiSprite* sprite, [MarshalAs(UnmanagedType.U1)] bool flip);

        /// <summary>
        ///  Gets the vertical flip flag.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_get_flip_y", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_get_flip_y(FfiSprite* sprite);

        /// <summary>
        ///  Sets both flip flags at once.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `flip_x`: Whether to flip horizontally
        ///  - `flip_y`: Whether to flip vertically
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_flip", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_flip(FfiSprite* sprite, [MarshalAs(UnmanagedType.U1)] bool flip_x, [MarshalAs(UnmanagedType.U1)] bool flip_y);

        /// <summary>
        ///  Creates a new sprite with the specified horizontal flip (builder pattern).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_with_flip_x", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_with_flip_x(FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip);

        /// <summary>
        ///  Creates a new sprite with the specified vertical flip (builder pattern).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_with_flip_y", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_with_flip_y(FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip);

        /// <summary>
        ///  Creates a new sprite with both flip flags set (builder pattern).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_with_flip", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_with_flip(FfiSprite sprite, [MarshalAs(UnmanagedType.U1)] bool flip_x, [MarshalAs(UnmanagedType.U1)] bool flip_y);

        /// <summary>
        ///  Returns true if the sprite is flipped on either axis.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_is_flipped", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_is_flipped(FfiSprite* sprite);

        /// <summary>
        ///  Sets the anchor point with individual coordinates.
        ///
        ///  Coordinates are normalized in range [0.0, 1.0]:
        ///  - (0.0, 0.0) = Top-left
        ///  - (0.5, 0.5) = Center (default)
        ///  - (1.0, 1.0) = Bottom-right
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `x`: X anchor coordinate (normalized)
        ///  - `y`: Y anchor coordinate (normalized)
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_anchor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_anchor(FfiSprite* sprite, float x, float y);

        /// <summary>
        ///  Gets the anchor point of the sprite.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_get_anchor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_sprite_get_anchor(FfiSprite* sprite);

        /// <summary>
        ///  Creates a new sprite with the specified anchor (builder pattern).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_with_anchor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_with_anchor(FfiSprite sprite, float x, float y);

        /// <summary>
        ///  Sets a custom size for the sprite.
        ///
        ///  When set, the sprite is scaled to this size regardless of the
        ///  texture dimensions.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `width`: Custom width
        ///  - `height`: Custom height
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_custom_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_custom_size(FfiSprite* sprite, float width, float height);

        /// <summary>
        ///  Removes the custom size, using texture dimensions.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_clear_custom_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_clear_custom_size(FfiSprite* sprite);

        /// <summary>
        ///  Gets the custom size of the sprite.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to read
        ///  - `out_size`: Pointer to store the custom size
        ///
        ///  # Returns
        ///
        ///  `true` if the sprite has a custom size, `false` otherwise.
        ///
        ///  # Safety
        ///
        ///  - `sprite` and `out_size` must be valid, non-null pointers
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_get_custom_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_get_custom_size(FfiSprite* sprite, FfiVec2* out_size);

        /// <summary>
        ///  Returns whether the sprite has a custom size set.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_has_custom_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_sprite_has_custom_size(FfiSprite* sprite);

        /// <summary>
        ///  Creates a new sprite with the specified custom size (builder pattern).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_with_custom_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiSprite goud_sprite_with_custom_size(FfiSprite sprite, float width, float height);

        /// <summary>
        ///  Sets the texture handle for the sprite.
        ///
        ///  # Parameters
        ///
        ///  - `sprite`: Pointer to the sprite to modify
        ///  - `handle`: The new texture handle
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_set_texture", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void goud_sprite_set_texture(FfiSprite* sprite, ulong handle);

        /// <summary>
        ///  Gets the texture handle of the sprite.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_get_texture", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ulong goud_sprite_get_texture(FfiSprite* sprite);

        /// <summary>
        ///  Gets the effective size of the sprite.
        ///
        ///  Returns the custom size if set, otherwise the source rect size if set,
        ///  otherwise returns (0, 0) indicating the caller should query texture dimensions.
        ///
        ///  # Safety
        ///
        ///  - `sprite` must be a valid, non-null pointer
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_sprite_size_or_rect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiVec2 goud_sprite_size_or_rect(FfiSprite* sprite);

        /// <summary>
        ///  Returns the white color constant.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "goud_color_white", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern FfiColor goud_color_white();
